--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
