--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "next": "14.2.15",
-    "next-auth": "^5.0.0-beta.22",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
